[package]
name = "await_values"
version = "0.1.0"
edition = "2024"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
description = "Primitives for subscribing to / notifying about changes to values"
repository = "https://github.com/drewcrawford/await_values"
homepage = "https://sealedabstract.com/code/await_values"
license = "MIT OR Apache-2.0"
keywords = ["await","observer", "subscriber", "observable"]
categories = ["asynchronous", "concurrency", "gui", "rust-patterns"]
exclude = [".*"]
rust-version = "1.85.1"


[dependencies]
atomic-waker = "~1"
treiber_stack = "1.1"
wasm_safe_mutex = "0.1.1"
[dev-dependencies]
test_executors = "0.3.5"
